# course

./: .gitignore
api/: CMakeLists.txt  api.h  client.c  client.h  main.cpp  server.c  server.h
cli/: CMakeLists.txt  main.cpp
daemon/: CMakeLists.txt  daemon_func.cpp  daemon_func.h  main.cpp
rddtool/: CMakeLists.txt  conf.ini  config_manager.c  rrdtools.c  rrdtools.h
rrd_web/: Gemfile  package.json
rrd_web/app/assets/stylesheets/: application.css  welcome.css
rrd_web/app/controllers/: welcome_controller.rb
rrd_web/app/views/layouts/: application.html.erb
rrd_web/app/views/welcome/: about_db.html.erb  fetch.html.erb  fetch_form_json.html.erb  index.html.erb  new.html.erb
rrd_web/config/: application.rb  cable.yml  routes.rb  secrets.yml
rrd_web/config/environments/: production.rb
rrd_web/config/initializers/: assets.rb
rrd_web/lib/: client.rb
rrd_web/lib/my_modules/: client.rb
rrd_web/lib/rrd_c/: Makefile  web_client.c
rrd_web/lib/rrd_cpp/: Makefile  web_client.cpp
